# dsm-tauri

./: LICENSE  README.md
src/dsm-tauri/: index.html  package.json  pnpm-lock.yaml
src/dsm-tauri/src/: App.css  App.tsx  tailwind.css
src/dsm-tauri/src-tauri/: Cargo.toml  tauri.conf.json
src/dsm-tauri/src-tauri/icons/: icon.icns
src/dsm-tauri/src-tauri/src/: disk.rs  lib.rs  main.rs
